style.css
@font-face {
    font-family: rainyhearts;
    src: url(rainyhearts.ttf);
}

@keyframes floating {
    0% { transform: translate(0,  0px); }
    50%  { transform: translate(0, 15px); }
    100%   { transform: translate(0, -0px); }    
}

body {
    background-color: #F8F2EC;
    margin-top: 4%;
    margin-bottom: 4%;
}

.images {
    border-radius: 12px;
    border: 2px solid #6E4B44; 
}

.row {
    display: flex;
    flex-direction: row;
    gap: 6%;
}

.imgRow {
    display: flex;
    flex-direction: row;
    gap: 9%;
}

.imgRow2 {
    display: flex;
    flex-direction: row;
    gap: 2vw;
}

.imgRow3 {
    display: flex;
    flex-direction: row;
    gap: 2%;
}

.buttonRow {
    display: flex;
    justify-content: space-between;
}


.col {
    display: flex;
    flex-direction: column;
}

.imgCol {
    display: flex;
    flex-direction: column;
    align-content: space-between;
    gap: 2vw;
}

.center {
    display: flex;
    flex-direction: column;
    gap: 4%;
    margin: auto;
    padding-left: 20%;
    padding-right: 20%;
    justify-content: center;
}

.columnBox {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

.selfie {
    border-radius: 12px;
    border: solid 0.25vw #6E4B44;
    height: 50%;
    width: 50%;
}

.header {
    text-align: center;
    animation-name: floating;
    animation-duration: 3s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
    font-family: rainyhearts;
    font-size: 8vw;
    color: #EAADAD;
}

.name {
    width: 100%;
}

.text {
    font-family: rainyhearts;
    line-height: 1.5;
    word-spacing: 2pt;
    font-size: 2vw;
    color: #6E4B44;
}

.textCenter {
    font-family: rainyhearts;
    font-size: 2vw;
    line-height: 1.6;
    word-spacing: 2pt;
    color: #6E4B44;
    text-align: center;
}

.textHeading {
    font-family: rainyhearts;
    font-size: 3vw;
    line-height: 1.6;
    word-spacing: 2pt;
    color: #6E4B44;
    text-align: center;
}

.homeButtons {
    background-color: rgb(255, 206, 214);
    border-radius: 14px;
    border: solid 0.25vw #6E4B44;
    line-height: 1.6;
    word-spacing: 2pt;
    padding: 1vw 2vw;
    font-size: 2vw;
    color: #272323;
    font-family: rainyhearts;
    text-decoration: none;
    width: 28vw;
    height: 8vw;
}

.homeButtons:hover {
    background-color: #C5CE90;
}

.clearButtons {
    background-color: transparent;
    border: none;
    line-height: 1.6;
    word-spacing: 2pt;
    font-size: 2vw;
    color: #272323;
    font-family: rainyhearts;
    text-decoration: none;
    margin-left: 4%;
}

.clearButtons:hover {
    color: #C5CE90;
}

.pic {
    height: 100%;
    width: 100%;
    border-radius: 14px;
    border: solid 0.25vw #6E4B44;
}

.pic:hover {
    
}

.picSmall {
    width: 45%;
    border-radius: 14px;
    border: solid .25vw #6E4B44;
}

.picFlower {
    height: 100%;
    width: 100%;
    border-radius: 14px;
    border: solid 0.25vw #6E4B44;
}

@media only screen and (max-width: 450px) {
    .center {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding-left: 2%;
        padding-right: 2%;
    }

    .text {
        font-size: 6vw;
        font-family: rainyhearts;
        line-height: 1.6;
        word-spacing: 2pt;
        color: #6E4B44;
    }

    .textCenter {
        font-family: rainyhearts;
        line-height: 1.6;
        word-spacing: 2pt;
        font-size: 5vw;
        color: #6E4B44;
        text-align: center;
    }

    .textHeading {
        font-family: rainyhearts;
        font-size: 6vw;
        line-height: 1.6;
        word-spacing: 2pt;
        color: #6E4B44;
        text-align: center;
    }

    .homeButtons {
        background-color: rgb(255, 206, 214);
        border-radius: 14px;
        border: solid 0.25vw #6E4B44;
        line-height: 1.6;
        word-spacing: 2pt;
        padding: 1vw 2vw;
        font-size: 5vw;
        color: #272323;
        font-family: rainyhearts;
        text-decoration: none;
        width: 40vw;
        height: 14vw;
    }

    .clearButtons {
        background-color: transparent;
        border: none;
        line-height: 1.6;
        word-spacing: 2pt;
        font-size: 5vw;
        color: #272323;
        font-family: rainyhearts;
        text-decoration: none;
    }

    .row {
        display: flex;
        flex-direction: column;
        gap: 2%;
    }

    .selfie {
        border-radius: 12px;
        border: solid 0.25vw #6E4B44;
        height: 100%;
        width: 100%;
        margin-bottom: 8%;
        margin-top: 8%;
    }

    .spaces {
        display: none;
    }
    
}

